arreglando el post

--- a/frontend/src/app/user/user.component.html
+++ b/frontend/src/app/user/user.component.html
@@ -55,7 +55,7 @@
                                             <td>
                                                 <div class="card-action">
                                                     <button class="btn-small" type="button"(click)="edit(user, userForm)" >Edit</button>
-                                                    <button class="btn-small" type="button" (click)="delete(user)">Delete</button>
+                                                    <button class="btn-small" type="button" (click)="delete(user, userForm)">Delete</button>
                                                 </div>
                                             </td>
                                         </tr>
